syntax = "proto3";
package com.ti.takehome.grpc;

option java_multiple_files = true;
option java_package = "com.ti.takehome.grpc";
option java_outer_classname = "TodoServiceProto";

message TodoRequest {
  int64 id = 1;
}

message TodoData {
  int64 id = 1;
  string description = 2;
  bool completed = 3;
}

message CreateTodoRequest {
  string description = 1;
  bool completed = 2;
}

message UpdateTodoRequest {
  int64 id = 1;
  string description = 2;
  bool completed = 3;
}

message DeleteTodoResponse {
  bool success = 1;
}

message GetAllTodosResponse {
  repeated TodoData todos = 1;
}

service TodoService {
  rpc GetTodo(TodoRequest) returns (TodoData);
  rpc GetAllTodos(google.protobuf.Empty) returns (GetAllTodosResponse);
  rpc CreateTodo(CreateTodoRequest) returns (TodoData);
  rpc UpdateTodo(UpdateTodoRequest) returns (TodoData);
  rpc DeleteTodo(TodoRequest) returns (DeleteTodoResponse);
}

import "google/protobuf/empty.proto";